  - add table of explanation for {if} qualifiers in docs (boots)
  - fix bug when comparing array-keys to "selected" in html_options
    and html_checkboxes (messju)
  - add better checks for correctly nested tags when compiling (messju)
  - remove {$SCRIPT_NAME}. use {$smarty.server.SCRIPT_NAME} instead (messju)
  - remove $global_assign. assign global variables explicitly instead (messju)
  - fix example for count_characters in docs (boots)
  - add section new basic syntax section "Escaping Smarty Parsing" in docs (boots)
  - fix error handler call in config_load (boots)
  - remove warning in debug_print_var on php-resources (messju)
  - move function.assign.php to compiler.assign.php (messju)
  - add property $tpl_error_reporting (messju)
  - remove property $undefined. "null" is used literally instead (messju)

Version 2.6.0 (Nov 19, 2003)
----------------------------

  - move Smarty::quote_replace() to Smarty_Compiler::_quote_replace() (messju)
  - remove import of of attributes of {include_php} to php's namespace.
    use $params[name] instead (messju)

Version 2.6.0-RC3 (Nov 13, 2003)
--------------------------------

  - fix handling of $var.key inside [] (messju)
  - fix handling of assign inside {insert}-tags (messju)
  - fix handling if [...] inside triple-quotes in config-files (messju)
  - fix handling of simple-math-operators inside modifiers (Dominik, messju)
  - fix handling of trailing-slashes in open_basedir in
    smarty_core_create_dir_structure() (packman, messju)

Version 2.6.0-RC2 (Oct 8, 2003)
-------------------------------

  - apply modifiers only once to section-loop and foreach-from attrs (messju)
  - remove use of _smarty_cached_paths-files (messju)
  - remove Smarty::_plugin_implementation_exists() - use is_callable() (messju)
  - ignore {strip}/{/strip) inside {strip}-blocks (messju)
  - fixed removal of leading/trailing newlines in {strip}-blocks (messju)
  - fixed proper escaping of " and ' with escape:javascript (messju)